# ds4

./: Cargo.toml
src/: main.rs  report.rs
src/hid/: devices.rs  dualshock.rs  hidraw_device.rs  mod.rs
src/report/: input_data.rs  mod.rs  parse.rs  report_id.rs
