[package]
name = "ds4"
version = "0.1.0"
authors = ["szymon-solak <yoshuro@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-try-from-primitive = "1.0.0"
hidapi = { version = "1.2.3", default-features = false, features = ["linux-static-hidraw"] }
nom = "5.1.2"
ux = "0.1.3"
